--- a/index.html
+++ b/index.html
@@ -3,17 +3,42 @@
   <head>
     <meta charset="utf-8">
     <title>Excursion</title>
-    <link rel="stylesheet" href="/resources/css/style.css" type="text/css">
+    <link rel="stylesheet" href="./resources/css/style.css" type="text/css">
 
   </head>
 
   <body>
     <div class="header">
       <h1>Discover hidden places in the world around you</h1>
-
-      <h6 class="download_link"><a href="#">Download Excursion (Coming soon!)</a></h6>
-
     </div>
+
+    <div class="download_link">
+      <p><a href="#">Download Excursion (Coming soon!)</a></p>
+    </div>
+
+    <video src="./resources/videos/excursion.mp4" autoplay poster="posterimage.jpg">
+    </video>
+
+    <div class="subheader">
+      <h3>Your personal travel guide</h3>
+    </div>
+
+    <p>Excursion remembers places you like, and recommends new points of interest around you</p>
+
+    <img src="./resources/images/camp.jpg" alt="camp site">
+    <br>
+    <br>
+    <img src="./resources/images/phone.png" alt="phone">
+
+    <div class="subheader">
+      <h3>Coming Soon for iPhone and Android</h3>
+    </div>
+
+    <div class="download_link">
+      <p><a href="#">Download Excursion (Coming soon!)</a></p>
+    </div>
+
+    <p class="copy">&copy; Excursion</p>
 
   </body>
 </html>
