--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   </head>
 
   <body>
-    <div class="header">
+    <header class="header">
       <h1>Discover hidden places in the world around you</h1>
-    </div>
+    </header> 
 
     <div class="download_link">
       <p><a href="#">Download Excursion (Coming soon!)</a></p>
